--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                             <h2>BOGDANA</h2>
                             <p>
-                                <img src="img/sarahThumb.jpg" class="thumb" alt="Sarah" />
+                                <img src="img/bog8bit.jpg" class="thumb" alt="Sarah" />
                                 TBD</p>
 
                         </div><!--end column-->
@@ -85,7 +85,7 @@
 
                             <h2>ANDREI</h2>
                             <p>
-                                <img src="img/bradThumb.jpg" class="thumb" alt="Brad" />
+                                <img src="img/andrei8bit.jpg" class="thumb" alt="Brad" />
                                 TBD</p>
 
                         </div><!--end column-->
